# talk

./: README.md  pyproject.toml  talk.py  test-talk.py
