[project]
name = "talk-mlx"
version = "0.1.0"
description = "CLI-first voice assistant with managed daemon — TTS + STT on Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pocket-tts-mlx>=0.2.0",
    "moshi-mlx>=0.3.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
    "sphn>=0.2.0",
    "sentencepiece>=0.2.1",
    "huggingface-hub>=0.24",
    "numpy>=2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=14",
]

[project.scripts]
talk = "talk:main"

[tool.uv]
override-dependencies = ["sentencepiece>=0.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["talk.py"]
